--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
          <div id="question-5"> 
-           <h2>Obrigado por responder a pesquisa!</h2>
+           <h2>Obrigado por responder a pesquisa!<br>Seu resultado é:</h2>
            <p id=printscoreinfo></p>
 		   <div id="submit5" class="button">Exibir Resposta</div>
         	<div class="clearfix"></div>
